--- a/appveyor.yml
+++ b/appveyor.yml
@@ -7,3 +7,12 @@ build_script:
 artifacts:
   - path: 'library\open_jtalk.dll'
     name: open_jtalk
+
+deploy:
+  provider: GitHub
+  auth_token:
+    secure: "phbIUL1pW4otTYZTo79JgBo7dznsGhCGU3Jbs8jLhM482kySCkP2oXWofXKMPqtc"
+  artifact: 'library\open_jtalk.dll'
+  on:
+    appveyor_repo_tag: true
+  force_update: true
