Add Linux build script

--- a/.github/workflows/build-library.yml
+++ b/.github/workflows/build-library.yml
@@ -3,10 +3,19 @@ name: Build Library
 on: [push]
 
 jobs:
-  build:
+  buildOnMac:
     runs-on: macos-latest
 
     steps:
     - uses: actions/checkout@v2
     - run: curl -O -L http://ftpmirror.gnu.org/automake/automake-1.15.tar.gz && tar -zxf automake-1.15.tar.gz && cd automake-1.15 && ./configure && make && make install
-    - run: chmod +x ./build_osx.sh && . ./build_osx.sh
+    - run: chmod +x ./build_unix.sh && . ./build_unix.sh mac
+
+  buildOnLinux:
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v2
+    - run: sudo apt-get install csh -y && curl -O -L http://ftpmirror.gnu.org/automake/automake-1.15.tar.gz && tar -zxf automake-1.15.tar.gz && cd automake-1.15 && ./configure && make && sudo make install
+    - run: chmod +x ./build_unix.sh && . ./build_unix.sh linux
+
