Add flags -fPIC

--- a/mecab/src/Makefile.in
+++ b/mecab/src/Makefile.in
@@ -312,7 +312,8 @@ AM_CPPFLAGS = -D DIC_VERSION=@DIC_VERSION@ \
               -D MECAB_DEFAULT_RC="\"@MECAB_DEFAULT_RC@\"" \
               -D MECAB_DEFAULT_CHARSET="\"@MECAB_DEFAULT_CHARSET@\"" \
               -D PACKAGE="\"@PACKAGE@\"" \
-              -D VERSION="\"@VERSION@\""
+              -D VERSION="\"@VERSION@\"" \
+              -fPIC
 
 mecab_dict_index_SOURCES = mecab-dict-index.cpp
 mecab_dict_index_LDADD = libmecab.a
