--- a/mecab2njd/Makefile.in
+++ b/mecab2njd/Makefile.in
@@ -280,7 +280,7 @@ top_srcdir = @top_srcdir@
 EXTRA_DIST = Makefile.mak
 DISTCLEANFILES = *.log *.out *~
 MAINTAINERCLEANFILES = Makefile.in
-AM_CPPFLAGS = -I @top_srcdir@/njd
+AM_CPPFLAGS = -I @top_srcdir@/njd -fPIC
 noinst_LIBRARIES = libmecab2njd.a
 libmecab2njd_a_SOURCES = mecab2njd.h \
                          mecab2njd.c
