--- a/jpcommon/Makefile.in
+++ b/jpcommon/Makefile.in
@@ -281,7 +281,7 @@ top_srcdir = @top_srcdir@
 EXTRA_DIST = Makefile.mak
 DISTCLEANFILES = *.log *.out *~
 MAINTAINERCLEANFILES = Makefile.in
-AM_CPPFLAGS = @CHARSET@
+AM_CPPFLAGS = @CHARSET@ -D ASCII_HEADER -fPIC
 noinst_LIBRARIES = libjpcommon.a
 libjpcommon_a_SOURCES = jpcommon.h \
                         jpcommon.c \
