--- a/njd/Makefile.in
+++ b/njd/Makefile.in
@@ -280,7 +280,7 @@ top_srcdir = @top_srcdir@
 EXTRA_DIST = Makefile.mak
 DISTCLEANFILES = *.log *.out *~
 MAINTAINERCLEANFILES = Makefile.in
-AM_CPPFLAGS = @CHARSET@
+AM_CPPFLAGS = @CHARSET@ -fPIC
 noinst_LIBRARIES = libnjd.a
 libnjd_a_SOURCES = njd.h \
                    njd.c \
