--- a/njd_set_accent_phrase/Makefile.in
+++ b/njd_set_accent_phrase/Makefile.in
@@ -282,7 +282,7 @@ top_srcdir = @top_srcdir@
 EXTRA_DIST = Makefile.mak
 DISTCLEANFILES = *.log *.out *~
 MAINTAINERCLEANFILES = Makefile.in
-AM_CPPFLAGS = -I @top_srcdir@/njd @CHARSET@
+AM_CPPFLAGS = -I @top_srcdir@/njd @CHARSET@ -fPIC
 noinst_LIBRARIES = libnjd_set_accent_phrase.a
 libnjd_set_accent_phrase_a_SOURCES = njd_set_accent_phrase.h \
                                      njd_set_accent_phrase.c \
