--- a/njd_set_accent_type/Makefile.in
+++ b/njd_set_accent_type/Makefile.in
@@ -281,7 +281,7 @@ top_srcdir = @top_srcdir@
 EXTRA_DIST = Makefile.mak
 DISTCLEANFILES = *.log *.out *~
 MAINTAINERCLEANFILES = Makefile.in
-AM_CPPFLAGS = -I @top_srcdir@/njd @CHARSET@
+AM_CPPFLAGS = -I @top_srcdir@/njd @CHARSET@ -fPIC
 noinst_LIBRARIES = libnjd_set_accent_type.a
 libnjd_set_accent_type_a_SOURCES = njd_set_accent_type.h \
                                    njd_set_accent_type.c \
