--- a/njd_set_digit/Makefile.in
+++ b/njd_set_digit/Makefile.in
@@ -280,7 +280,7 @@ top_srcdir = @top_srcdir@
 EXTRA_DIST = Makefile.mak
 DISTCLEANFILES = *.log *.out *~
 MAINTAINERCLEANFILES = Makefile.in
-AM_CPPFLAGS = -I @top_srcdir@/njd @CHARSET@
+AM_CPPFLAGS = -I @top_srcdir@/njd @CHARSET@ -fPIC
 noinst_LIBRARIES = libnjd_set_digit.a
 libnjd_set_digit_a_SOURCES = njd_set_digit.h \
                              njd_set_digit.c \
