--- a/njd_set_long_vowel/Makefile.in
+++ b/njd_set_long_vowel/Makefile.in
@@ -281,7 +281,7 @@ top_srcdir = @top_srcdir@
 EXTRA_DIST = Makefile.mak
 DISTCLEANFILES = *.log *.out *~
 MAINTAINERCLEANFILES = Makefile.in
-AM_CPPFLAGS = -I @top_srcdir@/njd @CHARSET@
+AM_CPPFLAGS = -I @top_srcdir@/njd @CHARSET@ -fPIC
 noinst_LIBRARIES = libnjd_set_long_vowel.a
 libnjd_set_long_vowel_a_SOURCES = njd_set_long_vowel.h \
                                   njd_set_long_vowel.c \
