--- a/njd_set_unvoiced_vowel/Makefile.in
+++ b/njd_set_unvoiced_vowel/Makefile.in
@@ -282,7 +282,7 @@ top_srcdir = @top_srcdir@
 EXTRA_DIST = Makefile.mak
 DISTCLEANFILES = *.log *.out *~
 MAINTAINERCLEANFILES = Makefile.in
-AM_CPPFLAGS = -I @top_srcdir@/njd @CHARSET@
+AM_CPPFLAGS = -I @top_srcdir@/njd @CHARSET@ -fPIC
 noinst_LIBRARIES = libnjd_set_unvoiced_vowel.a
 libnjd_set_unvoiced_vowel_a_SOURCES = njd_set_unvoiced_vowel.h \
                                       njd_set_unvoiced_vowel.c \
