--- a/.github/workflows/build-library.yml
+++ b/.github/workflows/build-library.yml
@@ -10,6 +10,11 @@ jobs:
     - uses: actions/checkout@v2
     - run: curl -O -L http://ftpmirror.gnu.org/automake/automake-1.15.tar.gz && tar -zxf automake-1.15.tar.gz && cd automake-1.15 && ./configure && make && make install
     - run: chmod +x ./build_unix.sh && . ./build_unix.sh mac
+    - name: Release
+      if: startsWith(github.ref, 'refs/tags/')
+      uses: softprops/action-gh-release@v1
+      with:
+        files: library/libopenjtalk.dylib
 
   buildOnLinux:
     runs-on: ubuntu-latest
@@ -18,6 +23,11 @@ jobs:
     - uses: actions/checkout@v2
     - run: sudo apt-get install csh -y && curl -O -L http://ftpmirror.gnu.org/automake/automake-1.15.tar.gz && tar -zxf automake-1.15.tar.gz && cd automake-1.15 && ./configure && make && sudo make install
     - run: chmod +x ./build_unix.sh && . ./build_unix.sh linux
+    - name: Release
+      if: startsWith(github.ref, 'refs/tags/')
+      uses: softprops/action-gh-release@v1
+      with:
+        files: library/libopenjtalk.so
 
   buildOnWindows:
     runs-on: windows-latest
@@ -38,4 +48,8 @@ jobs:
       - run: git submodule update --init; cd hts_engine_API; nmake /f Makefile.mak hts_lib
       - run: nmake /f Makefile.mak
       - run: ren library\open_jtalk.dll ${{ matrix.name }}_open_jtalk.dll ; cp library\${{ matrix.name }}_open_jtalk.dll ${{ matrix.name }}_open_jtalk.dll
-
+      - name: Release
+        if: startsWith(github.ref, 'refs/tags/')
+        uses: softprops/action-gh-release@v1
+        with:
+          files: ${{ matrix.name }}_open_jtalk.dll
