--- a/.github/workflows/build-library.yml
+++ b/.github/workflows/build-library.yml
@@ -82,6 +82,7 @@ jobs:
         version: ${{env.EM_VERSION}}
         actions-cache-folder: ${{env.EM_CACHE_FOLDER}}
     - run: chmod +x ./build_wasm.sh && . ./build_wasm.sh
+    - run: emar t library/lang/wasm-libopenjtalk-lang.a
     - name: Release
       if: startsWith(github.ref, 'refs/tags/')
       uses: softprops/action-gh-release@v1
