--- a/.github/workflows/build-library.yml
+++ b/.github/workflows/build-library.yml
@@ -83,6 +83,10 @@ jobs:
         actions-cache-folder: ${{env.EM_CACHE_FOLDER}}
     - run: chmod +x ./build_wasm.sh && . ./build_wasm.sh
     - run: emar t library/lang/wasm-libopenjtalk-lang.a
+    - uses: actions/upload-artifact@v2
+      with:
+        name: wasm-libopenjtalk-lang.a
+        path: library/lang/wasm-libopenjtalk-lang.a
     - name: Release
       if: startsWith(github.ref, 'refs/tags/')
       uses: softprops/action-gh-release@v1
