--- a/mecab-naist-jdic/Makefile.in
+++ b/mecab-naist-jdic/Makefile.in
@@ -262,7 +262,7 @@ target_alias = @target_alias@
 top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
-EXTRA_DIST = COPYING Makefile.mak naist-jdic.csv matrix.def _left-id.def _pos-id.def _rewrite.def _right-id.def char.def unk.def feature.def
+EXTRA_DIST = COPYING Makefile.mak naist-jdic.csv matrix.def _left-id.def _pos-id.def _rewrite.def _right-id.def char.def unk.def feature.def unidic-csj.csv
 DISTCLEANFILES = *.log *.out *~
 MAINTAINERCLEANFILES = Makefile.in char.bin matrix.bin sys.dic unk.dic left-id.def rewrite.def pos-id.def right-id.def
 dicdir = @prefix@/dic
@@ -477,7 +477,7 @@ uninstall-am: uninstall-dicDATA
 .PRECIOUS: Makefile
 
 
-char.bin matrix.bin sys.dic unk.dic left-id.def rewrite.def pos-id.def right-id.def: naist-jdic.csv matrix.def _left-id.def _rewrite.def _pos-id.def _right-id.def char.def unk.def feature.def
+char.bin matrix.bin sys.dic unk.dic left-id.def rewrite.def pos-id.def right-id.def: naist-jdic.csv matrix.def _left-id.def _rewrite.def _pos-id.def _right-id.def char.def unk.def feature.def unidic-csj.csv
 	cp _left-id.def left-id.def
 	cp _rewrite.def rewrite.def
 	cp _pos-id.def pos-id.def
